<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FajrApp</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_language">App Language</string>
    <string name="settings_location">Location</string>
    <string name="settings_calculation_method">Calculation Method</string>
    <string name="settings_time_offset">Time Offset</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_version_prefix">Version</string>
    
    <!-- Settings Subtitles -->
    <string name="settings_location_unknown">Unknown</string>
    <string name="settings_location_updating">Updating location...</string>
    <string name="settings_method_default">Umm Al-Qura</string>
    <string name="settings_offset_default">0 minutes</string>
    <string name="settings_offset_custom">Custom</string>
    <string name="settings_notifications_on">On</string>
    <string name="settings_notifications_enabled_count">Enabled: %1$d of %2$d</string>
    <string name="notification_single_sound">Single sound for all prayers</string>
    <string name="notification_enable_label">Enable notification</string>
    <string name="notification_sound_label">Sound</string>
    <string name="notification_sound_system_default">System default sound</string>
    <string name="notification_sounds_azan">Azan sounds</string>
    <string name="notification_sounds_azan_fajr">Azan for Fajr</string>
    <string name="notification_sounds_system">System sounds</string>
    <string name="notification_sound_preview_play">Play</string>
    <string name="notification_sound_preview_stop">Stop</string>
    <string name="location_use_current">Use current location</string>
    <string name="location_hint">You can use auto-detection, city search, or coordinates</string>
    <string name="location_city_title">City</string>
    <string name="location_city_input_label">City name</string>
    <string name="location_city_find_button">Find city</string>
    <string name="location_searching">Searching...</string>
    <string name="location_coordinates_title">Coordinates</string>
    <string name="location_latitude_label">Latitude</string>
    <string name="location_longitude_label">Longitude</string>
    <string name="location_coordinates_save_button">Save by coordinates</string>
    <string name="location_saved_success">Location saved</string>
    <string name="location_error_device">Could not get current location</string>
    <string name="location_error_empty_city">Enter a city name</string>
    <string name="location_error_city_not_found">City was not found</string>
    <string name="location_error_invalid_coordinates">Invalid coordinate format</string>
    <string name="location_error_out_of_range">Latitude or longitude out of range</string>
    <string name="calc_method_label">Calculation method</string>
    <string name="calc_asr_label">Asr calculation</string>
    <string name="calc_dst_label">Daylight saving time</string>
    <string name="calc_dst_auto">Auto (by region)</string>
    <string name="calc_dst_minus_one">-1 hour</string>
    <string name="calc_dst_plus_one">+1 hour</string>
    <string name="calc_asr_shafi">Standard (Shafi, Maliki, Hanbali)</string>
    <string name="calc_asr_hanafi">Hanafi</string>
    <string name="calc_method_mwl">Muslim World League</string>
    <string name="calc_method_isna">ISNA (North America)</string>
    <string name="calc_method_egyptian">Egyptian Authority</string>
    <string name="calc_method_karachi">Karachi</string>
    <string name="calc_method_umm_al_qura">Umm Al-Qura</string>
    <string name="calc_method_dubai">Dubai</string>
    <string name="calc_method_moonsighting">Moon Sighting Committee</string>
    <string name="calc_method_kuwait">Kuwait</string>
    <string name="calc_method_qatar">Qatar</string>
    <string name="calc_method_singapore">Singapore</string>
    <string name="time_offset_hint">Adjust each prayer time in minutes. Use minus and plus buttons.</string>
    <string name="time_offset_format">%1$+d min</string>
    <string name="lesson_wudu">Ablution lessons</string>
    <string name="lesson_prayer_format">Lessons of %1$s prayer</string>
    <string name="calendar_title">Calendar</string>
    <string name="calendar_unavailable">Calendar is available on Android 8.0 and newer.</string>
    <string name="calendar_year_format">%1$d (%2$s)</string>
    <string name="calendar_week_mon">MON</string>
    <string name="calendar_week_tue">TUE</string>
    <string name="calendar_week_wed">WED</string>
    <string name="calendar_week_thu">THU</string>
    <string name="calendar_week_fri">FRI</string>
    <string name="calendar_week_sat">SAT</string>
    <string name="calendar_week_sun">SUN</string>
    <string name="calendar_current_month_badge">Current month</string>
    <string name="calendar_prev_month">Previous month</string>
    <string name="calendar_next_month">Next month</string>
    <string name="calendar_reset_month">Current month</string>
    <string name="calendar_holidays_title">Islamic holidays (%1$s/%2$s)</string>
    <string name="calendar_holiday_eid_al_fitr_translit">Id al-Fitr</string>
    <string name="calendar_holiday_eid_al_fitr_arabic">عيد الفطر</string>
    <string name="calendar_holiday_eid_al_fitr_aliases">(Oraza Ait, Oraza Bayram)</string>
    <string name="calendar_holiday_eid_al_adha_translit">Id al-Adha</string>
    <string name="calendar_holiday_eid_al_adha_arabic">عيد الأضحى</string>
    <string name="calendar_holiday_eid_al_adha_aliases">(Qurban Ait, Qurban Bayram)</string>
    <string name="calendar_holiday_title_line">%1$s (%2$s)</string>
    <string name="calendar_holiday_dates_line">%1$s / %2$s</string>
    <string name="calendar_holiday_tashriq_dates_line">Tashriq days (3 days): %1$s / %2$s</string>
    <string name="alarm_title">Prayer alarms</string>
    <string name="alarm_create_title">Create alarm</string>
    <string name="alarm_edit_title">Edit alarm</string>
    <string name="alarm_before">Before</string>
    <string name="alarm_after">After</string>
    <string name="alarm_minutes_label">Minutes</string>
    <string name="alarm_add_button">Add alarm</string>
    <string name="alarm_save_button">Save</string>
    <string name="alarm_empty">No alarms</string>
    <string name="alarm_not_found">Alarm not found</string>
    <string name="alarm_repeat_label">Repeat</string>
    <string name="alarm_repeat_weekly">Every week</string>
    <string name="alarm_repeat_custom">Choose days</string>
    <string name="alarm_repeat_custom_summary">Selected weekdays</string>
    <string name="alarm_ringtone_label">Sound</string>
    <string name="alarm_ringtone_system_default">System default alarm</string>
    <string name="alarm_before_format">%1$d min before prayer</string>
    <string name="alarm_after_format">%1$d min after prayer starts</string>
    <string name="alarm_delete">Delete alarm</string>
    <string name="alarm_notification_title">Prayer alarm</string>
    <string name="alarm_notification_text">%1$s reminder</string>
    <string name="alarm_channel_name">Prayer alarms</string>
    <string name="alarm_channel_description">Alarm notifications tied to prayer times</string>
    
    <!-- Common -->
    <string name="str_loading">Loading...</string>
    <string name="footer_dua">May Allah accept your prayers</string>
    <string name="timer_prefix">in</string>
    
    <!-- Prayer Names -->
    <string name="prayer_fajr">Fajr</string>
    <string name="prayer_sunrise">Duha</string>
    <string name="prayer_dhuhr">Dhuhr</string>
    <string name="prayer_asr">Asr</string>
    <string name="prayer_maghrib">Maghrib</string>
    <string name="prayer_isha">Isha</string>
    <string name="prayer_tahajjud">Tahajjud</string>
    <string name="prayer_duha_explanation_format">Calculated sunrise time is %1$s. Adding 20 minutes gives the start of Duha time: %2$s. According to Sunnah, it is preferable to delay Duha and pray it roughly 1.5-2 hours before Dhuhr, approximately in the range %3$s-%4$s.</string>
    
    <!-- Hijri Months -->
    <string name="hijri_muharram">Muharram</string>
    <string name="hijri_safar">Safar</string>
    <string name="hijri_rabi_al_awwal">Rabi\' al-awwal</string>
    <string name="hijri_rabi_al_athani">Rabi\' al-thani</string>
    <string name="hijri_jumada_al_ula">Jumada al-awwal</string>
    <string name="hijri_jumada_al_akhirah">Jumada al-thani</string>
    <string name="hijri_rajab">Rajab</string>
    <string name="hijri_shaban">Sha\'ban</string>
    <string name="hijri_ramadan">Ramadan</string>
    <string name="hijri_shawwal">Shawwal</string>
    <string name="hijri_dhu_al_qadah">Dhu al-Qi\'dah</string>
    <string name="hijri_dhu_al_hijjah">Dhu al-Hijjah</string>
</resources>
