...
        ) {
            SettingsItem(
                icon = Icons.Default.Language,
                title = stringResource(R.string.settings_language),
                subtitle = uiState.selectedLanguage.nativeName,
                hazeState = hazeState,
                itemContentDescription = "Open Language Selection",
                onClick = onLanguageClick
            )
            SettingsItem(
                icon = Icons.Default.LocationOn,
                title = stringResource(R.string.settings_location),
                subtitle = if (uiState.isUpdatingLocation) {
...
