...
                        modifier = Modifier.padding(end = smallPadding),
                        cornerRadius = boxCornerRadius,
                        hazeState = hazeState
                    ) {
                        Column(
                            modifier = Modifier
                                .semantics { contentDescription = "Open Calendar" }
                                .clickable { onCalendarClick() }
                                .padding(horizontal = 13.dp * scale, vertical = 8.dp * scale)
                        ) {
                            Text(
                                text = uiState.hijriDate,
                                color = Color.White,
...
                    }
                }

                GlassContainer(
                    modifier = Modifier
                        .padding(bottom = 24.dp * scale)
                        .semantics { contentDescription = "Open Alarms" }
                        .clickable { onClockClick() },
                    cornerRadius = timerCornerRadius,
                    hazeState = hazeState,
                    blurEnabled = false
                ) {
                    Column(
...
